--- a/style.css
+++ b/style.css
@@ -2,3 +2,21 @@ label {
     display: block;
     font: 1rem 'fira sans', sans-serif;
 }
+label,
+textarea
+{
+    font-size: 1rem;
+    letter-spacing: 1px;
+}
+textarea {
+    padding: 5px;
+    line-height: 1,5;
+    border-radius: 5px;
+    border: 1px;
+    box-shadow: 1px 1px 1px #999
+}
+label {
+    display: block;
+    margin-bottom: 10px;
+}
+
